--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^3.1.0
   firebase_storage: ^10.1.0
   font_awesome_flutter: ^9.2.0
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/blank-profile-picture.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
