--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   firebase_storage: ^10.1.0
   font_awesome_flutter: ^9.2.0
   image_picker: ^0.8.4+4
-
+  timeago: ^3.1.0
+  firebase_database: ^8.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
