--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^0.8.4+4
   timeago: ^3.1.0
   firebase_database: ^8.2.0
+  bubble: ^1.2.1 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
